most files setup

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
             <nav>
               <ul class="nav">
                 <li>
-                  <a href="news.html">News</a>
+                  <a href="news.html">Home</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="about.html">Posts</a>
                 </li>
                 <li>
-                  <a href="work.html">Work</a>
+                  <a href="work.html">Contact</a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/aylagursoy/">Instagram</a>
+                  <a href="work.html">About</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/aylagursoy/">Search</a>
                   </li>
                 </ul>
               </nav>
@@ -43,13 +46,12 @@
 
           <div class="landing-content">
             <h2 class="landing-paragraph">
-              Bergen based designer.</br>
-              Works in varius fields of design with focus on the meeting</br>between form, materials and humans.
+          
             </h2>
             <div>
-            <h2 class="the-donut-title">The Donut</h2>
-            <p class="the-donut-landing-paragraph">Wooden shelf, the perfect complement to any wall and space</p>
-            <a href="/thedonut.html"><button class="button">Read more</button></a>
+            <h2 class="the-donut-title"></h2>
+            <p class="the-donut-landing-paragraph"></p>
+            <a href="/thedonut.html"><button class="button"></button></a>
           </div>
           </div>
         </div>
