--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
       <div class="container">
     <header class="header-container">
       <a href="/">
-            <img class="logo" src="/img/image 20.png"></a>
+            <img class="logo" >Ett kvarter til marka</a>
             <nav>
               <ul class="nav">
                 <li>
-                  <a href="news.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="about.html">Posts</a>
+                  <a href="index.html">Posts</a>
                 </li>
                 <li>
-                  <a href="work.html">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                  <a href="work.html">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/aylagursoy/">Search</a>
+                    <a href="index.html">Search</a>
                   </li>
                 </ul>
               </nav>
