--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         src="https://kit.fontawesome.com/91d0eac963.js"
         crossorigin="anonymous"
       ></script>
-      <title>Ayla Gürsoy | Home</title>
+      <title>Ett kvarter til marka | Home</title>
     </head>
 <body>
     <main>
