clean up in html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
     <header class="header-container">
       <a href="/">
-            <img class="logo" >Ett kvarter til marka</a>
+            <h1 class="logo" >Ett kvarter til marka</h1></a>
             <nav>
               <ul class="nav">
                 <li>
@@ -46,12 +46,13 @@
 
           <div class="landing-content">
             <h2 class="landing-paragraph">
-          
+              Oslo doesn’t have nature you say?</br>
+              In this blog we will show you 10 places in Oslo you can get to within 30 minutes
             </h2>
-            <div>
-            <h2 class="the-donut-title"></h2>
-            <p class="the-donut-landing-paragraph"></p>
-            <a href="/thedonut.html"><button class="button"></button></a>
+            <div landing->
+            <h2 class="the-donut-title">37 Bus to nature heaven</h2>
+            <p class="the-donut-landing-paragraph">The 37 bus has alot of ups and downs, but one of the ups is the beautiful end stop .....</p>
+            <a href="/thedonut.html"><button class="button">Read more</button></a>
           </div>
           </div>
         </div>
