--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta
         name="description"
-        content="Ayla Gursoy - Bergen based designer"
+        content="Ett kvarter til marka"
       />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <link rel="stylesheet" href="css/normalize.css" />
