Second big init

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="index.html">Posts</a>
+                  <a href="allposts.html">Posts</a>
                 </li>
                 <li>
                   <a href="contact.html">Contact</a>
@@ -52,7 +52,7 @@
             <div landing->
             <h2 class="the-donut-title">37 Bus to nature heaven</h2>
             <p class="the-donut-landing-paragraph">The 37 bus has alot of ups and downs, but one of the ups is the beautiful end stop .....</p>
-            <a href="/thedonut.html"><button class="button">Read more</button></a>
+            <a href="/detailedpost.html"><button class="button">Read more</button></a>
           </div>
           </div>
         </div>
