--- a/about.html
+++ b/about.html
@@ -20,12 +20,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="css/normalize.css" />
       <link rel="stylesheet" href="css/main.css" />
-      <link rel="stylesheet" href="css/about.css" />
+      <link rel="stylesheet" href="css/contact.css" />
       <script
         src="https://kit.fontawesome.com/91d0eac963.js"
         crossorigin="anonymous"
       ></script>
-      <title>Ayla Gürsoy | About</title>
+      <title>Ett kvarter til marka | About</title>
     </head>
 <body>
     <main>
@@ -56,50 +56,25 @@
           <div class="about-container-overall">
           <div class="about-container-left">
         <h2 class="page-title">About</h2>
-        <p class="about-paragraph">Furniture designer based in Bergen.
-            Ayla focuses on the meeting between form, materials and humans, and she is driven by her curiosity and
-            attention to details. She is a hands
-            -
-            on designer, using physical prototyping as her main tool in her design
-            process. 
-            Her process results in a functional, clean, yet bold aesthetic. 
-            She is currently taking her master in
-            furniture and spatial design at the University of Bergen.
-            </p>
-            <p class="about-paragraph-part-two">She is working in different fields within design. Interior stylist at Heem Bergen, building her
-                studio and her vision for it, and also establishing Ytre Studio together with two other Bergen based
-                designers.
-                </p>
+        <p class="about-paragraph">Tekst</p>
+            <p class="about-paragraph-part-two">Tekst</p>
                 <div class="resume-chevron-container">
                   <h2 class="resume-title">Résumé</h2>
                   <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="resume">
                     <h2 class="sub-title">Exhibitions</h2>
-                    <p class="resume-paragraph">Bergen interior and designfair 2018</br>
-                        Stockholm furniture fair 2018</br>
-                        Stockholm furniture fair 2019</br>
-                        Kraft Bergen 2019</br>
-                        Oslo design fair 2019</br>
-                        Fjell festning light festival 2019</br>
-                        Havrommet opening minifestival 2020</br>
-                        Akvariet Bergen 2020</br>
-                        </p>
+                    <p class="resume-paragraph">Dropdown tekst</p>
                     <h2 class="sub-title">Other</h2>
-                    <p class="resume-paragraph">Internship at Anderssen and Voll 2018</br>
-                        Bachelor in furniture and spatial design/interior architecture
-                        - KMD at UiB 2019</br>
-                        Exhibitiondesign for Fjordfiesta, Oslo designfair 2019</br>
-                        Stylist at Heem Bergen (current)</br>
-                        Master in Design - KMD at UiB (current)</br></p>
+                    <p class="resume-paragraph">Dropdown Tekst</p>
                 </div>
                 <h2 class="contact-title">Contact</h2>
                 <p class="contact-paragraph">For any questions or inquiries, please do not hesitate to contact me through social media or by email.</p>
-                <p class="contact-info"><i class="fas fa-envelope"></i> me@aylagursoy.com</p>
-                <p class="contact-info"><i class="fas fa-phone-alt"></i> +47 950 36 921</p>
-                <p class="contact-info"><i class="fab fa-instagram"></i> @aylagursoy</p>
+                <p class="contact-info"><i class="fas fa-envelope"></i> me@lorem.com</p>
+                <p class="contact-info"><i class="fas fa-phone-alt"></i> +47 111 22 333</p>
+                <p class="contact-info"><i class="fab fa-instagram"></i> @saulsays</p>
               </div>
-              <div class="about-container-right"><img src="img/OoBoSkMA.jpeg"></div>
+              <div class="about-container-right"><img src="img//yayayaya.jpg"></div>
               </div>
                 <footer>
                 </footer>
