--- a/detailedpost.html
+++ b/detailedpost.html
@@ -25,7 +25,7 @@
         src="https://kit.fontawesome.com/91d0eac963.js"
         crossorigin="anonymous"
       ></script>
-      <title>Ayla Gürsoy | The Donut</title>
+      <title>Ett kvarter til marka | The best post ever</title>
     </head>
 <body>
     <main>
@@ -59,59 +59,18 @@
         <div class="donut-container-overall-content">
             <div class="donut-container-left">
         <div class="donut-title-and-info-container">
-        <h2 class="donut-title">The donut</h2>
+        <h2 class="donut-title">The best post ever</h2>
         <p class="donut-paragraph">
-            The Donut shelf is mainly used to place keys, jewelry and other small items. The shelf can be turned the desired way,
-            with the convex side offering a bowl for smaller
-            items
-            and the flat side for placing objects.
-            The perfect complement to any wall and space.</p>
-            <div class="donut-color-toggle-container">
-              <div class="donut-color-toggle donut-color-toggle-black">
-              <i class="fas fa-circle"></i></div>
-              <div class="donut-color-toggle donut-color-toggle-beige">
-              <i class="fas fa-circle"></i></div>
-            </div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </div>
           <div class="donut-order-container">
             <h2 class="donut-sub-title">Want to place an order?</h2>
-            <p class="donut-order-paragraph">To order:</br> Please submit quantity, color and billing information
-                to</br>Mail: shop@aylagursoy.com
-                </p>
-                <div class="shipping-price-container">
-            <p class="order-donut-price">1.800 NOK</p>
-            <p class="shipping-info">Shipping info <i class="fas fa-info-circle"></i></p>
-                </div>
-
-                <div class="shipping-dropdown">
-                  <p class="shipping-dropdown-paragraph">Payment through invoice</br>
-                    Bergen: free </br>
-                    Rest of Norway: 140 ,-</br>
-                    World: Depends on country</br>
-                    </p>
-              </div>
-
-              </div>
+            <p class="donut-order-paragraph"></p>
                 <div class="donut-info-container">
                   <div class="donut-info-container-left">
-                  <h2 class="specifications">Specifications</h2> 
-                  <ul>
-                    <li>Material: Solid ash, one piece</li>
-                    <li>Dimensions:  D: 10 cm, W: 20 cm, H: 6 cm</li>
-                    <li>Coat: Ozmo hardwax</li>
-                  </ul>
                   </div>
                   <div class="donut-info-container-right">
-                    <h2 class="purchase">Purchase at</h2>
-                    <ul>
-                      <a href="https://heimbryggen.no/search?q=donut&fbclid=IwAR0Jye7-Ye-GyhnjFDVcKDpPh1oCkgKDPhAnYDz9Mra77D2jsec6AQDLryk">
-                      <li>Heim Bryggen, Bergen</li></a>
-                      <a href="http://www.galleribrown.com/">
-                      <li>Galleri Brown, Sandefjord</li></a>
-                      <a href="http://www.fair-design.com/shelving/donut-shelf">
-                      <li>Fair Design, New York</li></a>
-                    </ul>
-                  </div>
+                </div>
                 </div>
               </div>
           <div class="donut-container-right">
@@ -119,26 +78,26 @@
             <button onclick="cycleImages('prev')">
               <i class="fas fa-chevron-left"></i>
             </button>
-              <img class="slideshow-beige"  src="img/ny-devK8lPg.jpeg">
-              <img class="slideshow-beige" src="img/ny-KK8S9Q1A.jpeg">
-              <img class="slideshow-beige" src="img/ny-Qb2qh6tQ.jpeg">
+              <img class="slideshow-beige"  src="img/Group 30.jpg">
+              <img class="slideshow-beige" src="img/yayayaya.jpg">
+              <img class="slideshow-beige" src="img/Group 30.jpg">
 
-              <img class="slideshow-black" src="img/ny-s-3-r4Imjw.jpeg">
-              <img class="slideshow-black" src="img/ny-s-IV--bK1w.jpeg">
+              <img class="slideshow-black" src="img/Group 30.jpg">
+              <img class="slideshow-black" src="img/yayayaya.jpg">
               <!-- <img class="slideshow-black" src="img/ny-s-saJel_Uw.jpeg"> -->
-              <img class="slideshow-black" src="img/ny-s-zVugfMgQ.jpeg">
+              <img class="slideshow-black" src="img/Group 30.jpg">
               <button onclick="cycleImages('next')">
                 <i class="fas fa-chevron-right"></i>
               </button>
             </div>
           </div>
         </div>
-            <footer>
-            </footer>
-      </div>
+        <footer>
+        </footer>
     </div>
+    <button class="button">Next post</button>
+</div>
     </main>
-
 </body>
-<script src="js/donut.js"></script>
+<script src="js/detailed.js"></script>
 </html>
