--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 </header>
           <div class="about-container-overall">
           <div class="about-container-left">
-        <h2 class="page-title">About</h2>
+        <h2 class="page-title">Contact</h2>
         <p class="about-paragraph">Tekst</p>
             <p class="about-paragraph-part-two">Tekst</p>
                 <div class="resume-chevron-container">
