--- a/allposts.html
+++ b/allposts.html
@@ -39,7 +39,7 @@
                       </ul>
                     </nav>
                 </header>
-        <h2 class="page-title">News</h2>
+        <h2 class="page-title">All posts</h2>
         <p class="allposts-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
         <div class="news-card-container">
           <div class="news-card">
