--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
             <a href="/detailedpost.html"><button class="button">Read more</button></a>
           </div>
           </div>
+
+          
         </div>
-          <footer class="footer">
-          </footer>
+        
       </div>
+      <div class="container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi fuga odio eos iusto! Aliquid, explicabo! Officia pariatur delectus voluptas quibusdam ullam reprehenderit aliquam at perferendis corporis laboriosam. Eum, porro.</p>
+        <div class="posts-container">
+
+        </div>
+    </div>
     </main>
 
 </body>
 <script src="js/script.js"></script>
+<script src="js/posts.js"></script>
 </html>
