js posts incomming

--- a/allposts.html
+++ b/allposts.html
@@ -17,51 +17,49 @@
     <main>
       <div class="container">
         <header class="header-container">
-            <a href="/">
-                  <h1 class="logo" >Ett kvarter til marka</h1></a>
-                  <nav>
-                    <ul class="nav">
-                      <li>
-                        <a href="index.html">Home</a>
-                      </li>
-                      <li>
-                        <a href="allposts.html">Posts</a>
-                      </li>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="about.html">About</a>
-                      </li>
-                      <li>
-                          <a href="index.html">Search</a>
-                        </li>
-                      </ul>
-                    </nav>
-                </header>
+          <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
+          <nav>
+            <ul class="nav">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="allposts.html">Posts</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="index.html">Search</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
         <h2 class="page-title">All posts</h2>
-        <p class="allposts-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        <p class="allposts-paragraph">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged. It has survived not only five
+          centuries, but also the leap into electronic typesetting, remaining
+          essentially unchanged. It has survived not only five centuries, but
+          also the leap into electronic typesetting, remaining essentially
+          unchanged. It has survived not only five centuries, but also the leap
+          into electronic typesetting, remaining essentially unchanged.
+        </p>
         <div class="news-card-container">
-          <div class="news-card">
-            <a
-              href="/detailedpost.html"
-            >
-              <img src="img/Rectangle 12 (2).png" />
-              <p class="news-date">08.02.2021</p>
-              <h2 class="news-title">This is the best post ever</h2>
-              <p class="news-paragraph">
-                If you havent read this post yet, you are in for a treat.
-              </p>
-              <div class="read-more-container">
-                <button class="read-more-news">Read more</button>
-                <i class="fas fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
+          <div class="posts-container"></div>
         </div>
         <button class="button">Older posts</button>
-    </div>
+      </div>
       <footer></footer>
     </main>
   </body>
+  <script src="js/script.js"></script>
+  <script src="js/posts.js"></script>
 </html>
