--- a/about.html
+++ b/about.html
@@ -1,86 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
-  <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:2274856,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
-      <meta charset="UTF-8" />
-      <meta
-        name="description"
-        content="Ett kvarter til marka"
-      />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="css/normalize.css" />
-      <link rel="stylesheet" href="css/main.css" />
-      <link rel="stylesheet" href="css/contact.css" />
-      <script
-        src="https://kit.fontawesome.com/91d0eac963.js"
-        crossorigin="anonymous"
-      ></script>
-      <title>Ett kvarter til marka | About</title>
-    </head>
-<body>
+  <head>
+    <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2274856, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Ett kvarter til marka" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <script
+      src="https://kit.fontawesome.com/91d0eac963.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Ett kvarter til marka | About</title>
+  </head>
+  <body>
     <main>
       <div class="container">
         <header class="header-container">
-            <a href="/">
-                  <h1 class="logo" >Ett kvarter til marka</h1></a>
-                  <nav>
-                    <ul class="nav">
-                      <li>
-                        <a href="index.html">Home</a>
-                      </li>
-                      <li>
-                        <a href="allposts.html">Posts</a>
-                      </li>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="about.html">About</a>
-                      </li>
-                      <li>
-                          <a href="index.html">Search</a>
-                        </li>
-                      </ul>
-                    </nav>
-                </header>
-          <div class="about-container-overall">
+          <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
+          <nav>
+            <ul class="nav">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="allposts.html">Posts</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="index.html">Search</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <div class="about-container-overall">
           <div class="about-container-left">
-        <h2 class="page-title">About</h2>
-        <p class="about-paragraph">Tekst</p>
-            <p class="about-paragraph-part-two">Tekst</p>
-                <div class="resume-chevron-container">
-                  <h2 class="resume-title">Résumé</h2>
-                  <i class="fas fa-chevron-down"></i>
-                </div>
-                <div class="resume">
-                    <h2 class="sub-title">Exhibitions</h2>
-                    <p class="resume-paragraph">Dropdown tekst</p>
-                    <h2 class="sub-title">Other</h2>
-                    <p class="resume-paragraph">Dropdown Tekst</p>
-                </div>
-                <h2 class="contact-title">Contact</h2>
-                <p class="contact-paragraph">For any questions or inquiries, please do not hesitate to contact me through social media or by email.</p>
-                <p class="contact-info"><i class="fas fa-envelope"></i> me@lorem.com</p>
-                <p class="contact-info"><i class="fas fa-phone-alt"></i> +47 111 22 333</p>
-                <p class="contact-info"><i class="fab fa-instagram"></i> @saulsays</p>
-              </div>
-              <div class="about-container-right"><img src="img//yayayaya.jpg"></div>
-              </div>
-                <footer>
-                </footer>
+            <h2 class="page-title">About</h2>
+            <p class="about-paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Doloremque, laborum. Velit optio nam fugiat deleniti. Quidem
+              soluta facilis itaque nihil delectus quod ratione animi magni
+              consequuntur consectetur totam, facere repellendus. Sint quia quae
+              officia veniam magni eum voluptate aut quas quis voluptates optio
+              esse mollitia cum consectetur numquam, perspiciatis porro!
+              Quisquam aspernatur nemo sed culpa numquam a vel iure voluptates.
+            </p>
+            <p class="about-paragraph-part-two">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis molestiae iusto asperiores esse, at dolore facere quas,
+              impedit dolorem fuga accusantium quisquam iste. Itaque, molestiae
+              in! Dolore nesciunt incidunt omnis!
+            </p>
+          </div>
+          <div class="about-container-right">
+            <img src="img//yayayaya.jpg" />
+            <button class="button">Home</button>
+          </div>
+        </div>
+        <footer></footer>
       </div>
-    </div>
     </main>
-</body>
-<script src="js/script.js"></script>
+  </body>
+  <script src="js/script.js"></script>
 </html>
