active nav etc etc

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
               <li>
                 <a href="contact.html">Contact</a>
               </li>
-              <li>
+              <li class="active-nav-title">
                 <a href="about.html">About</a>
               </li>
               <li>
@@ -55,8 +55,11 @@
           </nav>
         </header>
         <div class="about-container-overall">
+          <h2 class="page-title">About</h2>
+          <div class="about-container-right">
+            <img class="page-image" src="img//yayayaya.jpg" />
+          </div>
           <div class="about-container-left">
-            <h2 class="page-title">About</h2>
             <p class="about-paragraph">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Doloremque, laborum. Velit optio nam fugiat deleniti. Quidem
@@ -73,10 +76,7 @@
               in! Dolore nesciunt incidunt omnis!
             </p>
           </div>
-          <div class="about-container-right">
-            <img src="img//yayayaya.jpg" />
-            <button class="button">Home</button>
-          </div>
+          <button class="button">Home</button>
         </div>
         <footer></footer>
       </div>
