--- a/allposts.html
+++ b/allposts.html
@@ -23,7 +23,7 @@
               <li>
                 <a href="index.html">Home</a>
               </li>
-              <li>
+              <li class="active-nav-title">
                 <a href="allposts.html">Posts</a>
               </li>
               <li>
@@ -39,6 +39,7 @@
           </nav>
         </header>
         <h2 class="page-title">All posts</h2>
+        <img src="/img/yayayaya.jpg" class="page-image" />
         <p class="allposts-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
