--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               <li>
                 <a href="allposts.html">Posts</a>
               </li>
-              <li>
+              <li class="active-nav-title">
                 <a href="contact.html">Contact</a>
               </li>
               <li>
@@ -54,8 +54,9 @@
             </ul>
           </nav>
         </header>
-        <div class="about-container-overall">
-          <div class="about-container-left">
+        <img class="page-image" src="img//yayayaya.jpg" />
+        <div class="contact-container-overall">
+          <div class="contact-container-left">
             <h2 class="page-title">Contact</h2>
             <p class="about-paragraph">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore
@@ -67,7 +68,8 @@
               nulla ad officiis voluptate, harum facere, unde maiores
               voluptatum.
             </p>
-
+          </div>
+          <div class="contact-container-right">
             <h2 class="contact-title">
               For any questions or inquiries, please do not hesitate to contact
               me through social media or by email.
@@ -90,9 +92,6 @@
             <p class="contact-info">
               <i class="fab fa-instagram"></i> @saulsays
             </p>
-          </div>
-          <div class="about-container-right">
-            <img src="img//yayayaya.jpg" />
           </div>
         </div>
         <footer></footer>
