--- a/detailedpost.html
+++ b/detailedpost.html
@@ -1,103 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
-  <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:2274856,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
-      <meta charset="UTF-8" />
-      <meta
-        name="description"
-        content="Ett kvarter til marka"
-      />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="css/normalize.css" />
-      <link rel="stylesheet" href="css/main.css" />
-      <link rel="stylesheet" href="css/detailedpost.css" />
-      <script
-        src="https://kit.fontawesome.com/91d0eac963.js"
-        crossorigin="anonymous"
-      ></script>
-      <title>Ett kvarter til marka | The best post ever</title>
-    </head>
-<body>
+  <head>
+    <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2274856, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Ett kvarter til marka" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/detailedpost.css" />
+    <script
+      src="https://kit.fontawesome.com/91d0eac963.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Ett kvarter til marka | The best post ever</title>
+  </head>
+  <body>
     <main>
       <div class="container">
         <header class="header-container">
-            <a href="/">
-                  <h1 class="logo" >Ett kvarter til marka</h1></a>
-                  <nav>
-                    <ul class="nav">
-                      <li>
-                        <a href="index.html">Home</a>
-                      </li>
-                      <li>
-                        <a href="allposts.html">Posts</a>
-                      </li>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="about.html">About</a>
-                      </li>
-                      <li>
-                          <a href="index.html">Search</a>
-                        </li>
-                      </ul>
-                    </nav>
-                </header>
-          <div class="donut-banner">
-              <img class="donut-image" >
+          <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
+          <nav>
+            <ul class="nav">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li class="active-nav-title">
+                <a href="allposts.html">Posts</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="index.html">Search</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <div class="donut-banner">
+          <img class="donut-image" />
+        </div>
+        <div class="donut-container-overall-content">
+          <div class="donut-container-left">
+            <div class="donut-title-and-info-container">
+              <h2 class="donut-title">The best post ever</h2>
+              <p class="donut-paragraph">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
             </div>
-            <div class="donut-container-overall-content">
-                <div class="donut-container-left">
-                <div class="donut-title-and-info-container">
-                <h2 class="donut-title">The best post ever</h2>
-                <p class="donut-paragraph">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                </div>
-          <div class="donut-order-container">
-            <h2 class="donut-sub-title">Want to place an order?</h2>
-            <p class="donut-order-paragraph"></p>
-                <div class="donut-info-container">
-                  <div class="donut-info-container-left">
-                  </div>
-                  <div class="donut-info-container-right">
-                </div>
-                </div>
+            <div class="donut-order-container">
+              <h2 class="donut-sub-title">Want to place an order?</h2>
+              <p class="donut-order-paragraph"></p>
+              <div class="donut-info-container">
+                <div class="donut-info-container-left"></div>
+                <div class="donut-info-container-right"></div>
               </div>
-          <div class="donut-container-right">
-            <div class="image-container">
-            <button onclick="cycleImages('prev')">
-              <i class="fas fa-chevron-left"></i>
-            </button>
-              <img class="slideshow-beige"  src="img/Group 30.jpg">
-              <img class="slideshow-beige" src="img/yayayaya.jpg">
-              <img class="slideshow-beige" src="img/Group 30.jpg">
+            </div>
+            <div class="donut-container-right">
+              <div class="image-container">
+                <button onclick="cycleImages('prev')">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <img class="slideshow-beige" src="img/Group 30.jpg" />
+                <img class="slideshow-beige" src="img/yayayaya.jpg" />
+                <img class="slideshow-beige" src="img/Group 30.jpg" />
 
-              <img class="slideshow-black" src="img/Group 30.jpg">
-              <img class="slideshow-black" src="img/yayayaya.jpg">
-              <!-- <img class="slideshow-black" src="img/ny-s-saJel_Uw.jpeg"> -->
-              <img class="slideshow-black" src="img/Group 30.jpg">
-              <button onclick="cycleImages('next')">
-                <i class="fas fa-chevron-right"></i>
-              </button>
+                <img class="slideshow-black" src="img/Group 30.jpg" />
+                <img class="slideshow-black" src="img/yayayaya.jpg" />
+                <!-- <img class="slideshow-black" src="img/ny-s-saJel_Uw.jpeg"> -->
+                <img class="slideshow-black" src="img/Group 30.jpg" />
+                <button onclick="cycleImages('next')">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
             </div>
           </div>
+          <footer></footer>
         </div>
-        <footer>
-        </footer>
-    </div>
-    <button class="button">Next post</button>
-</div>
+        <button class="button">Next post</button>
+      </div>
     </main>
-</body>
-<script src="js/detailed.js"></script>
+  </body>
+  <script src="js/detailed.js"></script>
 </html>
