--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="logo" >Ett kvarter til marka</h1></a>
             <nav>
               <ul class="nav">
-                <li>
+                <li class="active-nav-title">
                   <a href="index.html">Home</a>
                 </li>
                 <li>
@@ -54,7 +54,8 @@
             <p class="the-donut-landing-paragraph">The 37 bus has alot of ups and downs, but one of the ups is the beautiful end stop .....</p>
             <a href="/detailedpost.html"><button class="button">Read more</button></a>
           </div>
-          </div>
+        </div>
+        <i class="fas fa-chevron-down"></i>
 
           
         </div>
@@ -65,6 +66,7 @@
         <div class="posts-container">
 
         </div>
+        <button class="button">More posts</button>
     </div>
     </main>
 
