details page layout

--- a/detailedpost.html
+++ b/detailedpost.html
@@ -31,53 +31,67 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <header class="header-container">
-          <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
-          <nav>
-            <ul class="nav">
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li class="active-nav-title">
-                <a href="allposts.html">Posts</a>
-              </li>
-              <li>
-                <a href="contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="about.html">About</a>
-              </li>
-              <li>
-                <a href="index.html">Search</a>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <div class="donut-banner">
-          <img class="donut-image" />
+      <div class="full-screen-banner">
+        <div class="container">
+          <header class="header-container">
+            <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
+            <nav>
+              <ul class="nav">
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="active-nav-title">
+                  <a href="allposts.html">Posts</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                  <a href="about.html">About</a>
+                </li>
+                <li>
+                  <a href="index.html">Search</a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+          <h1 class="donut-title">The best post ever</h1>
+          <p class="donut-sub-title">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book.
+          </p>
         </div>
-        <div class="donut-container-overall-content">
-          <div class="donut-container-left">
-            <div class="donut-title-and-info-container">
-              <h2 class="donut-title">The best post ever</h2>
-              <p class="donut-paragraph">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book.
-              </p>
-            </div>
-            <div class="donut-order-container">
-              <h2 class="donut-sub-title">Want to place an order?</h2>
-              <p class="donut-order-paragraph"></p>
-              <div class="donut-info-container">
-                <div class="donut-info-container-left"></div>
-                <div class="donut-info-container-right"></div>
-              </div>
-            </div>
+        <i class="fas fa-chevron-down"></i>
+      </div>
+      <div class="container donut-container-overall-content">
+        <div class="donut-container-left">
+          <div class="donut-title-and-info-container">
+            <p class="donut-paragraph">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. Lorem Ipsum is
+              simply dummy text of the printing and typesetting industry. Lorem
+              Ipsum has been the industry's standard dummy text ever since the
+              1500s, when an unknown printer took a galley of type and scrambled
+              it to make a type specimen book.
+            </p>
+            <img src="/img/yayayaya.jpg" class="post-paragraph-image" />
+            <p class="donut-paragraph">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. Lorem Ipsum is
+              simply dummy text of the printing and typesetting industry. Lorem
+              Ipsum has been the industry's standard dummy text ever since the
+              1500s, when an unknown printer took a galley of type and scrambled
+              it to make a type specimen book.
+            </p>
+            <img src="/img/yayayaya.jpg" class="post-paragraph-image" />
             <div class="donut-container-right">
-              <div class="image-container">
+              <!-- <div class="image-container">
                 <button onclick="cycleImages('prev')">
                   <i class="fas fa-chevron-left"></i>
                 </button>
@@ -87,17 +101,18 @@
 
                 <img class="slideshow-black" src="img/Group 30.jpg" />
                 <img class="slideshow-black" src="img/yayayaya.jpg" />
-                <!-- <img class="slideshow-black" src="img/ny-s-saJel_Uw.jpeg"> -->
+                
                 <img class="slideshow-black" src="img/Group 30.jpg" />
                 <button onclick="cycleImages('next')">
                   <i class="fas fa-chevron-right"></i>
                 </button>
               </div>
+            </div> -->
             </div>
           </div>
-          <footer></footer>
+          <button class="button">Next post</button>
         </div>
-        <button class="button">Next post</button>
+        <footer></footer>
       </div>
     </main>
   </body>
