--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta
-        name="description"
-        content="Ett kvarter til marka"
-      />
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <link rel="stylesheet" href="css/normalize.css" />
-      <link rel="stylesheet" href="css/main.css" />
-      <link rel="stylesheet" href="css/index.css" />
-      <script
-        src="https://kit.fontawesome.com/91d0eac963.js"
-        crossorigin="anonymous"
-      ></script>
-      <title>Ett kvarter til marka | Home</title>
-    </head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Ett kvarter til marka" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <script
+      src="https://kit.fontawesome.com/91d0eac963.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Ett kvarter til marka | Home</title>
+  </head>
+  <body>
     <main>
-  <div class="full-screen-banner">
-      <div class="container">
-    <header class="header-container">
-      <a href="/">
-            <h1 class="logo" >Ett kvarter til marka</h1></a>
+      <div class="full-screen-banner">
+        <div class="container">
+          <header class="header-container">
+            <a href="/"> <h1 class="logo">Ett kvarter til marka</h1></a>
             <nav>
               <ul class="nav">
                 <li class="active-nav-title">
@@ -38,39 +37,43 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="index.html">Search</a>
-                  </li>
-                </ul>
-              </nav>
+                  <a href="index.html">Search</a>
+                </li>
+              </ul>
+            </nav>
           </header>
 
           <div class="landing-content">
             <h2 class="landing-paragraph">
-              Oslo doesn’t have nature you say?</br>
-              In this blog we will show you 10 places in Oslo you can get to within 30 minutes
+              Oslo doesn’t have nature you say? In this blog we will show you 10
+              places in Oslo you can get to within 30 minutes
             </h2>
             <div landing->
-            <h2 class="the-donut-title">37 Bus to nature heaven</h2>
-            <p class="the-donut-landing-paragraph">The 37 bus has alot of ups and downs, but one of the ups is the beautiful end stop .....</p>
-            <a href="/detailedpost.html"><button class="button">Read more</button></a>
+              <h2 class="the-donut-title">37 Bus to nature heaven</h2>
+              <p class="the-donut-landing-paragraph">
+                The 37 bus has alot of ups and downs, but one of the ups is the
+                beautiful end stop .....
+              </p>
+              <a href="/detailedpost.html"
+                ><button class="button">Read more</button></a
+              >
+            </div>
           </div>
+          <i class="fas fa-chevron-down"></i>
         </div>
-        <i class="fas fa-chevron-down"></i>
-
-          
-        </div>
-        
       </div>
       <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi fuga odio eos iusto! Aliquid, explicabo! Officia pariatur delectus voluptas quibusdam ullam reprehenderit aliquam at perferendis corporis laboriosam. Eum, porro.</p>
-        <div class="posts-container">
-
-        </div>
-        <button class="button">More posts</button>
-    </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi
+          fuga odio eos iusto! Aliquid, explicabo! Officia pariatur delectus
+          voluptas quibusdam ullam reprehenderit aliquam at perferendis corporis
+          laboriosam. Eum, porro.
+        </p>
+        <div class="posts-container"></div>
+        <button class="button" id="load-more-button">More posts</button>
+      </div>
     </main>
-
-</body>
-<script src="js/script.js"></script>
-<script src="js/posts.js"></script>
+  </body>
+  <script src="js/script.js"></script>
+  <script src="js/posts.js"></script>
 </html>
