--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <script
       src="https://kit.fontawesome.com/91d0eac963.js"
       crossorigin="anonymous"
@@ -55,11 +55,11 @@
           </nav>
         </header>
         <div class="about-container-overall">
-          <h2 class="page-title">About</h2>
           <div class="about-container-right">
             <img class="page-image" src="img//yayayaya.jpg" />
           </div>
           <div class="about-container-left">
+            <h2 class="page-title">About</h2>
             <p class="about-paragraph">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Doloremque, laborum. Velit optio nam fugiat deleniti. Quidem
@@ -76,7 +76,7 @@
               in! Dolore nesciunt incidunt omnis!
             </p>
           </div>
-          <button class="button">Home</button>
+          <button class="button">Back home</button>
         </div>
         <footer></footer>
       </div>
