--- a/allposts.html
+++ b/allposts.html
@@ -38,8 +38,8 @@
             </ul>
           </nav>
         </header>
-        <h2 class="page-title">All posts</h2>
         <img src="/img/yayayaya.jpg" class="page-image" />
+        <h2 class="page-title posts-title">All posts</h2>
         <p class="allposts-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -56,7 +56,7 @@
         <div class="news-card-container">
           <div class="posts-container"></div>
         </div>
-        <button class="button">Older posts</button>
+        <button class="button" id="load-more-button">Older posts</button>
       </div>
       <footer></footer>
     </main>
