--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,18 @@
               nulla ad officiis voluptate, harum facere, unde maiores
               voluptatum.
             </p>
+            <p class="contact-info">
+              <i class="fas fa-envelope"></i> me@lorem.com
+            </p>
+            <p class="contact-info">
+              <i class="fas fa-phone-alt"></i> +47 111 22 333
+            </p>
+            <p class="contact-info">
+              <i class="fab fa-instagram"></i> @saulsays
+            </p>
           </div>
           <div class="contact-container-right">
-            <h2 class="contact-title">
+            <h2 class="contact-subtitle">
               For any questions or inquiries, please do not hesitate to contact
               me through social media or by email.
             </h2>
@@ -83,15 +92,6 @@
             <label for="text">Enter your message:</label>
             <input type="text" id="text" name="text" />
             <button class="button">Submit</button>
-            <p class="contact-info">
-              <i class="fas fa-envelope"></i> me@lorem.com
-            </p>
-            <p class="contact-info">
-              <i class="fas fa-phone-alt"></i> +47 111 22 333
-            </p>
-            <p class="contact-info">
-              <i class="fab fa-instagram"></i> @saulsays
-            </p>
           </div>
         </div>
         <footer></footer>
