--- a/detailedpost.html
+++ b/detailedpost.html
@@ -90,25 +90,7 @@
               it to make a type specimen book.
             </p>
             <img src="/img/yayayaya.jpg" class="post-paragraph-image" />
-            <div class="donut-container-right">
-              <!-- <div class="image-container">
-                <button onclick="cycleImages('prev')">
-                  <i class="fas fa-chevron-left"></i>
-                </button>
-                <img class="slideshow-beige" src="img/Group 30.jpg" />
-                <img class="slideshow-beige" src="img/yayayaya.jpg" />
-                <img class="slideshow-beige" src="img/Group 30.jpg" />
-
-                <img class="slideshow-black" src="img/Group 30.jpg" />
-                <img class="slideshow-black" src="img/yayayaya.jpg" />
-                
-                <img class="slideshow-black" src="img/Group 30.jpg" />
-                <button onclick="cycleImages('next')">
-                  <i class="fas fa-chevron-right"></i>
-                </button>
-              </div>
-            </div> -->
-            </div>
+            <div class="donut-container-right"></div>
           </div>
           <button class="button">Next post</button>
         </div>
