--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
       </div>
       <div class="container">
+        <h2 class="landing-title">Latest posts</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi
           fuga odio eos iusto! Aliquid, explicabo! Officia pariatur delectus
