Removed posts from landing

--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2274856, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
     <meta charset="UTF-8" />
     <meta name="description" content="Ett kvarter til marka" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -83,14 +67,34 @@
               For any questions or inquiries, please do not hesitate to contact
               me through social media or by email.
             </h2>
-            <label for="name">Enter your name:</label>
-            <input type="name" id="name" name="name" />
-            <label for="email">Enter your email:</label>
-            <input type="email" id="email" name="email" />
-            <label for="text">Enter your subject:</label>
-            <input type="text" id="text" name="text" />
-            <label for="text">Enter your message:</label>
-            <input type="text" id="text" name="text" />
+            <label for="name">Name</label>
+            <input
+              type="name"
+              placeholder="Enter your name here"
+              id="name"
+              name="name"
+            />
+            <label for="email">Email</label>
+            <input
+              type="email"
+              placeholder="Enter your Email here"
+              id="email"
+              name="email"
+            />
+            <label for="text">Subject</label>
+            <input
+              type="text"
+              placeholder="Enter your Subject here"
+              id="text"
+              name="text"
+            />
+            <label for="text">Message</label>
+            <input
+              type="text"
+              placeholder="Enter your Message here"
+              id="text"
+              name="text"
+            />
             <button class="button">Submit</button>
           </div>
         </div>
