--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
               >
             </div>
           </div>
-          <i class="fas fa-chevron-down"></i>
+          <!-- <i class="fas fa-chevron-down"></i> -->
         </div>
       </div>
-      <div class="container">
+      <!-- <div class="container">
         <h2 class="landing-title">Latest posts</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi
@@ -72,7 +72,7 @@
         </p>
         <div class="posts-container"></div>
         <button class="button" id="load-more-button">More posts</button>
-      </div>
+      </div> -->
     </main>
   </body>
   <script src="js/script.js"></script>
