--- a/about.html
+++ b/about.html
@@ -1,22 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Hotjar Tracking Code for https://confident-mestorf-9ca180.netlify.app/ -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2274856, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
     <meta charset="UTF-8" />
     <meta name="description" content="Ett kvarter til marka" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,6 +45,13 @@
           <div class="about-container-left">
             <h2 class="page-title">About</h2>
             <p class="about-paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Doloremque, laborum. Velit optio nam fugiat deleniti. Quidem
+              soluta facilis itaque nihil delectus quod ratione animi magni
+              consequuntur consectetur totam, facere repellendus. Sint quia quae
+              officia veniam magni eum voluptate aut quas quis voluptates optio
+              esse mollitia cum consectetur numquam, perspiciatis porro!
+              Quisquam aspernatur nemo sed culpa numquam a vel iure voluptates.
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Doloremque, laborum. Velit optio nam fugiat deleniti. Quidem
               soluta facilis itaque nihil delectus quod ratione animi magni
