minor /br change

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
               </ul>
             </nav>
           </header>
-
           <div class="landing-content">
             <h2 class="landing-paragraph">
-              Oslo doesn’t have nature you say? In this blog we will show you 10
+              Oslo doesn’t have nature you say? </br>In this blog we will show you 10
               places in Oslo you can get to within 30 minutes
             </h2>
             <div landing->
